--- a/flower-front/src/assets/css/MyNav.css
+++ b/flower-front/src/assets/css/MyNav.css
@@ -4,14 +4,14 @@
     height: 40px;
     line-height: 40px;
 }
-#navBox #allSort{
+#navBox #allSort {
     font-weight: bold;
     font-size: 18px;
     width: 206px;
     height: 100%;
     margin-right: 46px;
     text-align: center;
-    background-color:#ff5757;
+    background-color: #ff5757;
 }
 #sortEl {
     width: 750px;
@@ -25,11 +25,11 @@
 }
 
 #navBox p {
-    margin-bottom: 0px; 
-    color:  #ff5757; 
+    margin-bottom: -2px;
+    color: #ff5757;
 }
 #sortBox {
-    background-color: rgba(255, 255, 255,0.94);
+    background-color: rgba(255, 255, 255, 0.94);
 }
 .sortItem {
     display: flex;
@@ -38,10 +38,10 @@
     flex-wrap: wrap;
     color: rgb(125 125 125);
 }
-.sortItem>span {
+.sortItem > span {
     margin: -9px 20px -10px 0;
 }
 
-.sortItem>span:hover {
-    color:  #ff5757;
+.sortItem > span:hover {
+    color: #ff5757;
 }
