解决顶部导航栏

--- a/flower-front/src/view/nav/Nav.css
+++ b/flower-front/src/view/nav/Nav.css
@@ -8,6 +8,7 @@ a {
 .nav-top {
     padding-left: 32px;
     display: flex;
+    left: 0;
     height: 35px;
     width: 100%;
     background-color: #F2F2F2;
@@ -15,6 +16,7 @@ a {
     box-sizing: border-box;
     justify-content: space-between;
     position: fixed;
+    z-index: 100;
 }
 .nav-top a {
     color: #737373;
